@startuml

package budgetflow.command {
    class DeleteExpenseCommand {
        # String input
        # CommandType commandType
        # String outputMessage
        + DeleteExpenseCommand(String input)
        + execute(List<Income> incomes, ExpenseList expenseList) throws UnfoundExpenseException
    }
}

package budgetflow.exception {
    class UnfoundExpenseException
}

package budgetflow.expense {
    class ExpenseList
}

package budgetflow.income {
    class Income
}

class Command {
    + Command(String input)
    + CommandType commandType
}

DeleteExpenseCommand --|> Command
DeleteExpenseCommand ..> UnfoundExpenseException : throws
DeleteExpenseCommand ..> Income : uses
DeleteExpenseCommand ..> ExpenseList : uses

@enduml
